// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar component sanity matches default snapshot 1`] = `
.c1 {
  background-color: #CCC;
  width: 2rem;
  height: 2rem;
}

.c1 {
  box-sizing: border-box;
}

.c0 {
  position: relative;
  overflow: hidden;
  border-radius: 100%;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  background-image: url(me.jpg);
}

<div
  alt="Avatar"
  class="c0 c1"
  src="me.jpg"
/>
`;

exports[`Avatar component sanity matches themed snapshot 1`] = `
.c2 {
  background-color: #CCC;
  width: 2rem;
  height: 2rem;
}

.c2 {
  box-sizing: border-box;
}

.c1 {
  position: relative;
  overflow: hidden;
  border-radius: 100%;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  background-image: url(me.jpg);
}

.c0 {
  font-size: 1em;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  color: #3F3D4B;
}

<div
  class="c0"
>
  <div
    alt="Avatar"
    class="c1 c2"
    src="me.jpg"
  />
</div>
`;
